# drivenets-topology-studio

./: .cursorrules  .gitignore  AI_DEBUG_IMPLEMENTATION_SUMMARY.md  AI_DEBUG_QUICK_START.md  ALL_FIXES_SUMMARY.md  API_HYBRID_UPDATE.md  BD_DISCOVERY_DONE.md  BROWSER_MCP_SETUP.md  BUG_FIXED_MP_DRAGGING_TPS.md  BUG_FIX_TEXT_JUMP_REGRAB.md  BUL_APPEND_TO_TP2_FIX.md  BUL_CENTER_POSITIONING.md  BUL_DRAG_ANY_BODY_AND_DEVICE_SYNC.md  BUL_FIXES_COMPLETE.md  BUL_FIX_ALL_TP_COMBINATIONS.md  BUL_MOVEMENT_RULES.md  CLIPBOARD_FIX_COMPLETE.md  COMPLETE_SESSION_SUMMARY_DEC_4.md  CRITICAL_FIX_FREE_ENDPOINTS.md  CRITICAL_UL2_SYNTAX_FIX.md  DEBUGGER_GUIDE.md  DEBUG_ALIGNMENT_SUMMARY.md  DEBUG_BUTTON_FIX_INSTRUCTIONS.md  DEPLOYMENT_GUIDE_DEC_4_2025.md  DEVELOPMENT_GUIDELINES.md  DEVICE_ATTACHED_CONNECTION_POINTS.md  DNAAS_CREDENTIALS_SETUP.md  DNAAS_FULLY_WORKING.md  DNAAS_HYBRID_STRATEGY.md  DNAAS_LIQUID_GLASS.md  DRIVENETS_PLATFORM_FRAMEWORK.md  ENHANCED_LINK_HITBOX_PRECISION.md  ENHANCED_LINK_TABLE_VLAN_STACK.md  ENHANCED_TP_AUTO_STICK.md  EVPN_NLRI_COMPLETE_FLOW_ANALYSIS.md  EVPN_VPWS_FXC_NLRI_PATH_ANALYSIS.md  EVPN_VPWS_FXC_PORT_SHUTDOWN_TRUE_FLOW.md  FINAL_UL2_FIX_CONNECTION_ENDPOINTS.md  FIX_ALL_TP_COMBINATIONS.md  FIX_BUL_CHAIN_EXTENSION.md  (+113 more)
FLOWSPEC_VPN/: BASIC_FUNCTIONALITY_COMPLETE_SCENARIO.md  FLOWSPEC_VPN_COMPLETE_TEST_PLAN.md  FLOWSPEC_VPN_CONFIG_EXAMPLE.md  FLOWSPEC_VPN_CONFIG_WITH_EXPLANATIONS.md  FLOWSPEC_VPN_DEBUGGING.md  FLOWSPEC_VPN_TEST_PLAN.md  FSVPN_WIZARD_README.md  SW-234158_HAPPY_FLOW.md  SW-234159_NEGATIVE_TESTING.md  fetch_jira_via_mcp.py  fsvpn_wizard.py  (+1 more)
(+5203 files in other folders)
