[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scaler"
version = "1.0.0"
description = "DNOS Configuration Scale Manager"
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.4.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "jinja2>=3.1.2",
    "apscheduler>=3.10.4",
    "cryptography>=41.0.0",
]

[project.scripts]
scaler = "scaler.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pyright]
include = ["scaler"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    "**/.git",
    "db",
    "dnos_cheetah_docs",
    "scaler.egg-info",
    "docs",
    "templates"
]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
